// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ImageEditor > snapshots > should render with empty images 1`] = `
<div>
  <div
    class="imageEditor"
  >
    <label
      class="imageEditor__label"
    >
      Images
    </label>
    <div
      class="imageEditor__grid"
    />
    <input
      accept="image/jpeg,image/png,image/gif,image/webp"
      class="imageEditor__fileInput"
      multiple=""
      type="file"
    />
    <button
      class="imageEditor__add"
      type="button"
    >
      + Add Image
    </button>
  </div>
</div>
`;

exports[`ImageEditor > snapshots > should render with images 1`] = `
<div>
  <div
    class="imageEditor"
  >
    <label
      class="imageEditor__label"
    >
      Images
    </label>
    <div
      class="imageEditor__grid"
    >
      <div
        class="imageEditor__item"
      >
        <div
          class="imageEditor__preview"
        >
          <img
            alt="Image 1"
            class="imageEditor__image"
            src="/api/images/abc-123"
          />
          <button
            aria-label="Remove image"
            class="imageEditor__remove"
            type="button"
          >
            ×
          </button>
        </div>
        <input
          class="imageEditor__input imageEditor__input--alt"
          placeholder="Alt text"
          type="text"
          value="Image 1"
        />
      </div>
      <div
        class="imageEditor__item"
      >
        <div
          class="imageEditor__preview"
        >
          <img
            alt="Image 2"
            class="imageEditor__image"
            src="/api/images/def-456"
          />
          <button
            aria-label="Remove image"
            class="imageEditor__remove"
            type="button"
          >
            ×
          </button>
        </div>
        <input
          class="imageEditor__input imageEditor__input--alt"
          placeholder="Alt text"
          type="text"
          value="Image 2"
        />
      </div>
    </div>
    <input
      accept="image/jpeg,image/png,image/gif,image/webp"
      class="imageEditor__fileInput"
      multiple=""
      type="file"
    />
    <button
      class="imageEditor__add"
      type="button"
    >
      + Add Image
    </button>
  </div>
</div>
`;
